# ansys-unified-mcp

./: .env.example  .gitignore  README.md  mcp_server.py  pyproject.toml  requirements.txt  setup.ps1
src/: __init__.py  mechanical_tools.py  optislang_tools.py  sim_impl.py  sim_tools.py  wb_bridge_tools.py  workbench_tools.py
src/ansys_unified_mcp/: __init__.py  __main__.py  config.py  connection_manager.py  shared.py
src/ansys_unified_mcp/drivers/: sim_impl.py
src/ansys_unified_mcp/scripts/: ansys_workbench_bridge.wbjn
src/ansys_unified_mcp/tools/: connection_doctor.py  mechanical.py  optislang.py  sim_tools.py  workbench.py  workbench_bridge.py
workbench_plugin/: main.py  mechanical_queue_processor.py  mechanical_socket_timer_v7.py
workbench_queue/: .gitkeep
