[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ansys-unified-mcp"
version = "2.0.0"
description = "Unified ANSYS MCP Server (Workbench, Mechanical, Fluent, SpaceClaim, OptiSLang)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp",
    "ansys-mechanical-core",
    "ansys-fluent-core",
    "ansys-geometry-core",
    "ansys-optislang-core",
    "lasso-python",
    "python-dotenv",
    "pydantic",
    "rich",
    "psutil"
]

[project.scripts]
ansys-unified-mcp = "ansys_unified_mcp.__main__:main"
